--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sai Mani Krishna Sistla"
-  avatar           : "profile.jpeg"
+  avatar           : "profileLogo.jpeg"
   bio              : "Senior Data Scientist at Soothsayer Analytics LLC"
   location         : "Location"
   employer         :
