--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Sai Mani Krishna Sistla"
+  name             : ""
   avatar           : "profileLogo.jpeg"
   bio              : "Senior Data Scientist at Soothsayer Analytics LLC"
   location         : "Location"
