--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Sai Mani Krishna Sistla "
 title_separator          : "-"
 name                     : &name "Sai Mani Krishna Sistla"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://parameshwar215.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "parameshwar215.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "Senior Data Scientist at Soothsayer Analytics LLC"
   location         : "Location"
   employer         :
