--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,12 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+  #   url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/  
+   - title: "Background"
+    url: /background/ 
 
   - title: "Projects"
     url: /projects/    
