--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-   - title: "Background"
-    url: /background/ 
+   # - title: "Background"
+   #  url: /background/ 
 
   - title: "Projects"
     url: /projects/    
