--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,9 @@
 main:
    # - title: "Background"
    #  url: /background/ 
-
+  - title: "Background"
+    url: /background/
+    
   - title: "Projects"
     url: /projects/    
     
