--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,14 +8,14 @@ main:
   - title: "Projects"
     url: /projects/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Blogs"
     url: /year-archive/
     
   - title: "Resume"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
